--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -20,9 +20,6 @@ hr{
 }
 
 
-
-
-
 h3,p,h4,table{
     color: aliceblue;
 }
@@ -45,7 +42,9 @@ h3,p,h4,table{
 }
 
 .containerMountain h3{
+    margin-bottom: 5px;
     font-size: 5vw;
+
 }
 
 .containerMountain p{
@@ -88,7 +87,6 @@ h3,p,h4,table{
 #servicesTitle{
     margin-top: 10px;
     text-align: center;
-
 }
 
 .proyects{
