--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -6,7 +6,7 @@
 
 :root {
     --colorFondo: #2d3250;  
-
+    --colorContenedoresPoyectos:#434b76;
 }
 
 body{
@@ -19,9 +19,6 @@ hr{
     width: 50vw;
 }
 
-i{
-    color: aliceblue;
-}
 
 
 h3,p,h4,table{
@@ -93,18 +90,31 @@ h3,p,h4,table{
     text-align: center;
 }
 
-.proyects{
+.projects{
     margin: 10px auto;
     width: 40vw;
     display: grid;
     grid-template-columns: 1fr;
-
-    
+    gap: 5px;
+    text-align: justify;
+      
 }
 
-.proyects>div{
+.projects>div{
+    padding:5px 10px 5px 5px; 
     border: 2px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 5px;
+    background-color: var(--colorContenedoresPoyectos);
 }
+
+.projects>div i{
+    margin: 20px 0px 20px 0px;
+}
+
+
 
 
 
