--- a/css/desings.css
+++ b/css/desings.css
@@ -4,9 +4,56 @@
     box-sizing: border-box;
 }
 
+:root {
+    --colorFondo: #2d3250;  
+    --colorContenedoresPoyectos:#434b76;
+    --colorFondoFooter:rgb(217, 134, 75);
+    --colorSubTitulos:goldenrod;
+}
+
 body{
    overflow-x: hidden; 
+   background-color: var(--colorFondo);
 }
+
+a{
+    text-decoration: none;
+}
+
+h1{
+    margin-top: 50px;
+    color: var(--colorSubTitulos);
+    text-align: center;
+
+}
+
+button{
+    margin-top: 20px;
+    margin-left: 20px;
+    padding: 15px;
+    border-radius: 5px;
+}
+
+.containerDesings{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 20px auto;
+    width: 80vw;
+
+}
+
+.containerDesings div{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: var(--colorContenedoresPoyectos);
+
+}
+
+
 
 
 footer{
