--- a/pages/desings/diseñoChica/estilos.css
+++ b/pages/desings/diseñoChica/estilos.css
@@ -5,46 +5,51 @@
 }
 
 body{
-    background-color: peru;
-    overflow-x: hidden;
-    
+   background-color: rgb(224, 177, 56);
 }
 
-
 section{
-    background-color: black;
+    margin: 0% auto;
+    
     width: 60vw;
-
     display: grid;
     grid-template-columns: repeat(5,1fr);
     grid-template-rows: repeat(14,1fr);
-    margin: auto;
-    grid-gap:6px;
+    background-color: black;
+}
+
+section>div{
+    position: relative;
+    padding-bottom: 100%;
+    
+
+}
+
+
+h1,h2,h3{
+position: absolute;
+top: 40%;
+
 }
 
 h1,h2{
+    font-size: 1.5vw;
+    width: 100%;
     text-align: right;
-
+    padding-right: 10px;
 }
-
-h1{
-    font-size:2.5vw;
-}
-
-h2{
-    font-size: 2.5vw;
-}
-
 h3{
     font-size: 2vw;
+    width: 100%;
 }
 
 .f1{
     background-image: url(./fragmentos/A.jpg);
     background-size: 100% 100%;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; 
     grid-row: 2/3;
     grid-column: 2/5;
+    padding-bottom: 33.33%;
 }
 
 .f2{
@@ -59,6 +64,7 @@ h3{
     color: aliceblue;
     grid-column: 4/6;
     grid-row: 3/4;
+    padding-bottom: 50%;
 }
 
 .f4{
@@ -87,6 +93,7 @@ h3{
     background-size: 100% 100%;
     grid-row:5/6 ;
     grid-column: 4/6;
+    padding-bottom: 50%;
 }
 
 .f8{
@@ -94,6 +101,7 @@ h3{
     background-size:100% 100% ;
     grid-row:6/7 ;
     grid-column:1/3 ;
+    padding-bottom: 50%;
 }
 
 .f9{
@@ -103,6 +111,7 @@ h3{
     color: aliceblue;
     grid-row: 7/8;
     grid-column: 1/3;
+    padding-bottom: 50%;
 }
 
 .f10{
@@ -141,6 +150,7 @@ h3{
     background-size: 100% 100%;
     grid-column: 4/6;
     grid-row: 9/10;
+    padding-bottom: 50%;
 }
 
 .f15{
@@ -162,6 +172,7 @@ h3{
     background-size: 100% 100%;
     grid-column: 2/4;
     grid-row: 13/14;
+    padding-bottom: 50%;
 }
 
 .f18{
@@ -173,13 +184,17 @@ h3{
     grid-column:5/6 ;
 }
 
+.iz{
+    text-align: left;
+}
+
 @media(max-width:800px){
 
 
     section{
-        width: 100vw;
-        height: 100vh;
+        width:100vw;
        
+
     }
 
      h1,h2{
@@ -187,6 +202,6 @@ h3{
     }
     h3{
         font-size: 3.5vw;
-    }  
-    
-} 
+    }
+
+}
