--- a/css/desings.css
+++ b/css/desings.css
@@ -22,6 +22,11 @@ main{
 
 a{
     text-decoration: none;
+
+}
+
+h3{
+    color: aliceblue;
 }
 
 h1{
@@ -53,6 +58,7 @@ button{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     padding: 20px;
     border-radius: 5px;
     background-color: var(--colorContenedoresPoyectos);
