updated informatica, desings and sombrillas

--- a/pages/desings/sombrillas/estilos.css
+++ b/pages/desings/sombrillas/estilos.css
@@ -106,6 +106,10 @@ main>div>p{
         align-items: center;
     }
 
+    img{
+        width:45vw;
+    }
+
     .contenedorIconos{
         width: 100vw;
         color: aliceblue;
