--- a/pages/desings/pokemon/css/estilos.css
+++ b/pages/desings/pokemon/css/estilos.css
@@ -31,7 +31,7 @@ section{
     grid-template-rows: repeat(5,1fr); 
     gap: 20px;
     width: 90vw;
-    margin: 20px;
+    margin-bottom: 20px;
 
 }
 
