--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -54,6 +54,10 @@ h3,p,h4,table{
     height: 25vh;
 }
 
+.containerMountain p{
+    font-size: 0.9em;
+}
+
 .containerMountain h3{
     margin-bottom: 5px;
     font-size: 5vw;
@@ -138,6 +142,22 @@ footer{
     display: flex;
     justify-content: space-between;
     background-color: var(--colorFondoFooter);
+}
+
+
+/*<----------------- DESING DESKTOP-------------------> */
+
+@media(min-width:900px){
+
+    .containerMountain{
+        padding-bottom: 20px;
+    }
+
+    .projects{
+        grid-template-columns:repeat(2,1fr) ;
+        grid-template-rows:repeat(2,1fr) ;
+    }
+
 }
 
 
