--- a/css/favWebsites.css
+++ b/css/favWebsites.css
@@ -54,6 +54,7 @@ button{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     padding: 20px;
     border-radius: 5px;
     background-color: var(--colorContenedoresPoyectos);
