--- a/css/pojects.css
+++ b/css/pojects.css
@@ -31,6 +31,9 @@ h1{
 
 }
 
+h3{
+    color: aliceblue;
+}
 
 
 button{
@@ -53,6 +56,7 @@ button{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     padding: 20px;
     border-radius: 5px;
     background-color: var(--colorContenedoresPoyectos);
