--- a/css/detailesProjects.css
+++ b/css/detailesProjects.css
@@ -17,11 +17,19 @@ body{
 }
 
 
+button{
+    margin-top: 20px;
+    margin-left: 20px;
+    padding: 15px;
+    border-radius: 5px;
+}
+
 h1{
-    margin-top: 10px;
+    margin-top: 30px;
     text-align: center;
     color: var(--colorSubTitulos);
 }
+
 
 p{
     margin: 10px auto;
@@ -30,31 +38,74 @@ p{
     color: aliceblue;
 }
 
+
+
+section{
+    margin: 0% auto;
+    width: 90vw;
+}
+
+
+
+
 section>div{
     display: flex;
+    flex-direction: column;
     margin-top: 50px;
     margin-bottom: 20px;
     gap: 20px;
     padding-right: 5px;
     padding-left: 5px;
-    box-shadow: rgb(136, 138, 140) 5px 5px 10px;
+    padding-bottom: 40px;
+    border-bottom: 2px solid aliceblue;
+   
+}
+
+section>div>p{
+    width: 100%;
 }
 
 section>div>img{
-    width: 50vw;
+    width: 100%;
 }
 
-section>div:nth-child(2){
-    flex-direction: row-reverse;
+
+
+
+hr{
+    margin: 0% auto;
+    width: 80%;
+    color: aliceblue;
+}
+
+footer{
+    margin-top: 100px;
+    border-top: 2px solid aliceblue;
+    padding: 20px 10px 20px 10px;
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--colorFondoFooter);
+    color: aliceblue;
 }
 
 
 @media (min-width:1100px){
-    body{
-        background-color: red;
+
+    section>div{
+        flex-direction: row;
     }
 
-    section>div>p{
-        font-size: 1.8em;
+    p{
+        font-size: 1.5em;
     }
+
+    div:nth-child(even){
+        flex-direction: row-reverse;
+    }
+
+    section>div>img{
+        width: 50vw;
+    }
+
+    
 }
