added foto personal

--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -76,14 +76,12 @@ h3,p,h4,table{
     margin-top: 20px;
 }
 
-.aboutme div{
-    width: 50px;
-    
-}
+
 
 .aboutme >div:first-child{
     display: none;
 }
+
 .aboutme >div:nth-child(2) h3,h6,p{
     margin-left: 15px;
     margin-bottom: 5px;
@@ -162,6 +160,22 @@ footer{
     .projects div{
         height: 150px;
     }
+
+    .aboutme{
+        margin: 0% auto;
+        width:50vw;
+        height: 380px;
+        
+    }
+    
+    .aboutme >div:first-child{
+        display: block;
+        background-image: url("../assets/img/fotoPersonal.png");
+        background-size: 100% 100%;
+        width: 1000px;
+    }
+
+
 
 }
 
