--- a/css/pojects.css
+++ b/css/pojects.css
@@ -17,7 +17,7 @@ body{
 }
 
 main{
-    min-height: 60vh;
+    min-height: 80vh;
 }
 
 a{
@@ -71,4 +71,8 @@ footer{
     display: flex;
     justify-content: space-between;
     background-color: var(--colorFondoFooter);
+}
+
+footer h3,footer p{
+    color: aliceblue;
 }
